# ehi-ignite-challenge

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: AUTONOMOUS-BUILD-LOOP.md  (+11 more)
ehi-atlas/: .gitignore  BUILD-ORCHESTRATION.md  CLAUDE.md  Makefile  README.md  pyproject.toml
ehi-atlas/.claude/: launch.json
ehi-atlas/app/: README.md  streamlit_app.py
ehi-atlas/app/components/: __init__.py  badges.py  corpus_loader.py  header.py  pipeline_diagram.py
ehi-atlas/app/pages/: 01_Sources_and_Bronze.py  02_Standardize.py  02b_PDF_Lab.py  02c_PDF_Compare.py  03_Harmonize.py  03_PDF_Lab.py  04_Gold_and_Provenance.py  04_PDF_Compare.py  05_Pipeline_Bakeoff.py  06_Harmonize_Labs.py
ehi-atlas/corpus/: README.md
ehi-atlas/corpus/_sources/cms-blue-button/: README.md
ehi-atlas/corpus/_sources/josh-ccdas/: CHOSEN.md  CLONE-INFO.md  PINNED-SHA.txt  README.md
ehi-atlas/corpus/_sources/josh-epic-ehi/: CLONE-INFO.md  INSPECTION.md  PINNED-SHA.txt  README.md
ehi-atlas/corpus/_sources/synthea/: CHOSEN.md  PLANTED-FACT.md  README.md
ehi-atlas/corpus/_sources/synthesized-lab-pdf/: README-extraction.md  README.md  generator.py
ehi-atlas/corpus/_sources/uploads/: README.md
ehi-atlas/corpus/reference/: VERSIONS.md
ehi-atlas/corpus/reference/handcrafted-crosswalk/: showcase.json
ehi-atlas/docs/: ADAPTER-CONTRACT.md  mapping-decisions.md
ehi-atlas/ehi_atlas/: __init__.py
ehi-atlas/ehi_atlas/adapters/: __init__.py  epic_ehi.py  lab_pdf.py
ehi-atlas/ehi_atlas/extract/: bake_off.py  cache.py  compare.py  eval.py  layout.py  pdf.py  schemas.py  to_fhir.py  uploads.py
ehi-atlas/ehi_atlas/extract/pipelines/: README.md  __init__.py  base.py  multipass_fhir.py  single_pass_vision.py
ehi-atlas/ehi_atlas/harmonize/: medication.py  observation.py  temporal.py
ehi-atlas/ehi_atlas/terminology/: __init__.py
ehi-atlas/notebooks/: 00_welcome_and_setup.ipynb  03_layer2b_vision_extraction.ipynb  05_layer3_temporal_and_identity.ipynb  06_layer3_condition_merge_artifact_1.ipynb  07_layer3_medication_artifact_2.ipynb  08_layer3_observation_artifact_5.ipynb
ehi-atlas/notes/: GLOSSARY.md  INDEX.md  SHAS-PINNED.md  session-00-lay-of-the-land.md
ehi-atlas/notes/app-lane/: INDEX.md
ehi-atlas/notes/data-lane/: INDEX.md  session-D01-data-catalog.md
ehi-atlas/notes/skill-demo/: INDEX.md
ehi-atlas/prototypes/: README.md
ehi-atlas/scripts/: validate-privacy-gate.sh
ehi-atlas/tests/adapters/: test_epic_ehi.py
ehi-atlas/tests/extract/: test_cache.py  test_layout.py  test_pdf.py  test_schemas.py  test_to_fhir.py
ehi-atlas/tests/harmonize/: test_code_map.py  test_conflict.py  test_identity.py  test_showcase_patient.py  test_temporal.py
ehi-atlas/tests/standardize/: test_terminology_loaders.py
(+368 files in other folders)
