[project]
name = "ehi-atlas"
version = "0.1.0"
description = "Patient-side EHI harmonization layer with FHIR-native provenance"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Blake Thomson" },
]
keywords = ["fhir", "ehi", "healthcare", "harmonization", "smart-on-fhir", "provenance"]

dependencies = [
    # Core runtime
    "pydantic>=2.7.0",
    "anthropic>=0.95.0",
    "instructor>=1.5.0",         # schema-constrained LLM output
    "python-dotenv>=1.0.0",

    # FHIR + clinical
    "fhir.resources>=7.1.0",     # FHIR R4 Pydantic models
    "pint>=0.23",                # UCUM-aware unit conversion

    # Data wrangling
    "pandas>=2.2.0",
    "duckdb>=1.0.0",
    "pyarrow>=16.0.0",

    # PDF + vision extraction
    "pdfplumber>=0.11.0",
    "pdf2image>=1.17.0",
    "pypdfium2>=4.30.0",
    "pillow>=10.4.0",
    "reportlab>=4.0.0",          # PDF synthesis for showcase artifacts

    # XML / CCDA + HL7 v2
    "lxml>=5.2.0",

    # CLI
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
ehi-atlas = "ehi_atlas.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ehi_atlas"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: marks tests as end-to-end integration tests that run the full orchestrator (deselect with '-m not integration' for fast loops)",
]
